--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.lanterna</groupId>
+            <artifactId>lanterna</artifactId>
+            <version>3.1.3</version> <!-- Проверьте актуальную версию! -->
+        </dependency>
     </dependencies>
 
 </project>
